--- a/iOS_Selectable_Overlay-swift/Info.plist
+++ b/iOS_Selectable_Overlay-swift/Info.plist
@@ -20,6 +20,12 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string> 地图SDK需要您的定位服务，否则可能无法使用。</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string> 地图SDK需要您的定位服务，否则可能无法使用。</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string> 地图SDK需要您的定位服务，否则可能无法使用。</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
