--- a/iOS_Selectable_Overlay/Info.plist
+++ b/iOS_Selectable_Overlay/Info.plist
@@ -25,7 +25,11 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string> 地图SDK需要您的定位服务，否则可能无法使用。</string>
 	<key>NSLocationAlwaysUsageDescription</key>
+	<string> 地图SDK需要您的定位服务，否则可能无法使用。</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
 	<string> 地图SDK需要您的定位服务，否则可能无法使用。</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
